# 6-DOF-MADDPG

./: obs_data.json
install/: local_setup.sh  setup.sh
install/ur_simulation_gz/lib/ur_simulation_gz/: end_effector_pos.py  maddpg_single_object.py  simple_action_client.py  simple_subscriber.py
install/ur_simulation_gz/share/ur_simulation_gz/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
install/ur_simulation_gz/share/ur_simulation_gz/cmake/: ur_simulation_gzConfig-version.cmake  ur_simulation_gzConfig.cmake
install/ur_simulation_gz/share/ur_simulation_gz/config/: ur_controllers.yaml
install/ur_simulation_gz/share/ur_simulation_gz/environment/: ament_prefix_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/ur_simulation_gz/share/ur_simulation_gz/launch/: ur_sim_control.launch.py  ur_sim_ddpg.launch.py  (+2 more)
log/: latest_build
src/ur_simulation_gz/ur_simulation_gz/: CMakeLists.txt
src/ur_simulation_gz/ur_simulation_gz/config/: ur_controllers.yaml
src/ur_simulation_gz/ur_simulation_gz/launch/: ur_sim_ddpg.launch.py  ur_sim_maddpg.launch.py
src/ur_simulation_gz/ur_simulation_gz/resources/: environment.sdf
src/ur_simulation_gz/ur_simulation_gz/scripts/: end_effector_pos.py  maddpg_single_object.py  reset_sim.py  simple_action_client.py  simple_subscriber.py
src/ur_simulation_gz/ur_simulation_gz/ur_simulation_gz/: maddpg.py  reset_subporcess.py
src/ur_simulation_gz/ur_simulation_gz/urdf/: ur_gz.urdf.xacro  ur_gz.urdf.xacro.urdf  ur_gz.urdf.xacro.urdf.sdf
(+10 files in other folders)
